# COSC414-project

./: CMakeLists.txt  CPU Scheduler Demo.pptx
docs/: documentation.md
include/: Process.h  ProcessMetrics.h  ProcessState.h  RoundRobin.h  Scheduler.h  State.h
src/: CMakeLists.txt  Process.cpp  RoundRobin.cpp  Scheduler.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
